--- a/src/commonTest/resources/templates/card.html
+++ b/src/commonTest/resources/templates/card.html
@@ -1,10 +1,10 @@
 <card header="Content" body="Content">
     <div class="card">
         <div class="card-header">
-            <header/>
+            ${header}
         </div>
         <div class="card-body">
-            <body/>
+            ${body}
         </div>
     </div>
 </card>
