Changing package name

--- a/src/commonTest/resources/templates/sidebar.html
+++ b/src/commonTest/resources/templates/sidebar.html
@@ -1,4 +1,4 @@
-import io.ktml.gen.SideBarItem
+import dev.ktool.ktml.gen.SideBarItem
 
 <sidebar ctx-sideBarItems="List<SideBarItem> = listOf()">
     <div class="sidebar">
