Implementing the rest of the basic functionality

--- a/src/commonTest/resources/templates/card.html
+++ b/src/commonTest/resources/templates/card.html
@@ -1,10 +1,10 @@
-<card header="Content" body="Content">
+<card header="Content" content="Content">
     <div class="card">
         <div class="card-header">
             ${header}
         </div>
         <div class="card-body">
-            ${body}
+            ${content}
         </div>
     </div>
 </card>
