--- a/src/commonTest/resources/templates/dashboard.html
+++ b/src/commonTest/resources/templates/dashboard.html
@@ -1,26 +1,28 @@
-<dashboard userName="String" message="String" userType="UserType" items="List<Item>">
+import my.app.*
+
+<dashboard userName="String" message="String" user="User" items="List<Item>">
     <page-layout title="Dashboard - ${user.name}">
         <header>
             <h1>Dashboard</h1>
         </header>
-        <body>
-        <h1>Hello, ${user.name}!</h1>
-        <h2 if="${userType == UserType.ADMIN}">You are an admin!</h2>
-        <h2 if="${userType == UserType.USER}">You are a user!</h2>
-        <h2 if="${userType == UserType.GUEST}">You are a guest!</h2>
-        <h2 if="${userType != UserType.GUEST}">You are not a guest!</h2>
-        <card>
-            <header>
-                <h3>Items</h3>
-            </header>
-            <body>
-            <ul>
-                <li each="${item, index in items}">${item.name} - Item ${index}</li>
-            </ul>
-            </body>
-        </card>
-        <sidebar/>
-        <my-button text="Click me!" onClick="alert('Hello World!')"/>
-        </body>
+        <content>
+            <h1>Hello, ${user.name}!</h1>
+            <h2 if="${user.type == UserType.ADMIN}">You are an admin!</h2>
+            <h2 if="${user.type == UserType.USER}">You are a user!</h2>
+            <h2 if="${user.type == UserType.GUEST}">You are a guest!</h2>
+            <h2 if="${user.type != UserType.GUEST}">You are not a guest!</h2>
+            <card>
+                <header>
+                    <h3>Items</h3>
+                </header>
+                <body>
+                <ul>
+                    <li each="${(index, item) in items.withIndex()}">${item.name} - Item ${index}</li>
+                </ul>
+                </body>
+            </card>
+            <sidebar></sidebar>
+            <my-button text="Click me!" onClick="alert('Hello World!')"></my-button>
+        </content>
     </page-layout>
 </dashboard>
