--- a/src/commonTest/resources/templates/page-layout.html
+++ b/src/commonTest/resources/templates/page-layout.html
@@ -11,7 +11,7 @@
         ${header}
     </div>
     <div class="content">
-        ${body}
+        ${content}
     </div>
     </body>
     </html>
