--- a/libraries/core/src/commonTest/resources/templates/dashboard.html
+++ b/libraries/core/src/commonTest/resources/templates/dashboard.html
@@ -1,4 +1,4 @@
-import my.app.*
+import dev.ktml.test.*
 
 <dashboard userName="String" message="String" user="User" items="List<Item>">
     <page-layout title="Dashboard - ${user.name}">
