--- a/libraries/core/src/commonTest/resources/templates/sidebar.html
+++ b/libraries/core/src/commonTest/resources/templates/sidebar.html
@@ -1,4 +1,4 @@
-import dev.ktml.gen.SideBarItem
+import dev.ktml.test.SideBarItem
 
 <sidebar ctx-sideBarItems="List<SideBarItem> = listOf()">
     <div class="sidebar">
