Adding doctype handling and fixing self closing tags

--- a/libraries/core/src/commonTest/resources/templates/dashboard.html
+++ b/libraries/core/src/commonTest/resources/templates/dashboard.html
@@ -21,7 +21,7 @@ import dev.ktml.test.*
                 </ul>
                 </body>
             </card>
-            <sidebar></sidebar>
+            <sidebar/>
             <my-button text="Click me!" onClick="alert('Hello World!')"></my-button>
         </content>
     </page-layout>
